@@ -42,6 +42,12 @@
             <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- for now-->
         <!--        <dependency>-->
@@ -95,7 +101,7 @@
                     <version>3.0.0</version>
                 </plugin>
             </plugins>
-        </pluginManagement>
+        </pluginManagement><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins>
     </build>
 <!--    <build>-->
 <!--        <plugins>-->
